toolbar: Limit item position to number of contained elements

Greater values don't make much sense.

https://bugzilla.gnome.org/show_bug.cgi?id=682080